--- a/dev/styles/includes/variables.styl
+++ b/dev/styles/includes/variables.styl
@@ -14,3 +14,7 @@ nav-background = brandColor
 clock-text-color = white
 clock-bg-color = brandColorTextLight
 clock-border-color = brandColorLight
+
+
+// menu variables
+menu-width = 400
